Basic version of Metadata Digger - v.0.1.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 *.class
 *.log
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+.idea/
+*.log
+*.iml
+*.ipr
+*.iws
+bin/
+.scala_dependencies
+.DS_Store
+build/
+.classpath
+.project
+.settings
+.worksheet
+.out
+spark-warehouse
