Added sample configuration files

--- a/src/main/resources/config/solr.config.properties
+++ b/src/main/resources/config/solr.config.properties
@@ -1,4 +1,4 @@
-input.paths=src/test/resources/images
+input.paths=<CHANGE_ME>
 output.collection=metadata_digger
 output.zk.servers=localhost:2181
 output.zk.znode=
