--- a/src/main/resources/configs/s3.solr.config.properties
+++ b/src/main/resources/configs/s3.solr.config.properties
@@ -1,5 +1,6 @@
 # Sample configuration for Amazon S3, see README.md for more information.
 input.paths=s3a://<SET_BUCKET_NAME_HERE>/<SET_DIR_HERE>,s3a://<SET_BUCKET_NAME_HERE>/<SET_ANOTHER_DIR_HERE>
+processing.maxMemoryGB=5
 storage.s3.accessKey=<CHANGE_ME>
 storage.s3.secretKey=<CHANGE_ME>
 # Below value could have different format, it depends on region and current Amazon settings, so if please check official Amazon S3 documentation
@@ -7,8 +8,10 @@ storage.s3.endpoint=s3.<SET_REGION_HERE>.amazonaws.com
 output.collection=metadata_digger
 output.zk.servers=localhost:2181
 output.zk.znode=
+output.storage.name=solr
 output.format=solr
-processing.maxMemoryGB=5
+output.solr.conversion.dateTimeTags=md_exif_ifd0_datetime,md_icc_profile_profile_datetime,md_gps_datetime
+output.solr.conversion.integerTags=md_jpeg_image_width,md_jpeg_image_height,md_exif_subifd_exif_image_width,md_exif_subifd_exif_image_height,md_gps_gps_satellites
 output.columns.includeDirsInTags=true
 output.columns.namingConvention=snakeCase
 output.columns.metadataPrefix=md_
