Sample configs adjustments for Solr

--- a/src/main/resources/configs/s3.solr.config.properties
+++ b/src/main/resources/configs/s3.solr.config.properties
@@ -10,7 +10,7 @@ output.zk.servers=localhost:2181
 output.zk.znode=
 output.storage.name=solr
 output.format=solr
-output.solr.conversion.dateTimeTags=md_exif_ifd0_datetime,md_icc_profile_profile_datetime,md_gps_datetime
+output.solr.conversion.dateTimeTags=md_exif_ifd0_datetime,md_icc_profile_profile_datetime,md_gps_datetime,md_exif_subifd_datetime_original
 output.solr.conversion.integerTags=md_jpeg_image_width,md_jpeg_image_height,md_exif_subifd_exif_image_width,md_exif_subifd_exif_image_height,md_gps_gps_satellites
 output.columns.includeDirsInTags=true
 output.columns.namingConvention=snakeCase
