:Added Tag Names field; Changed field with metadata content to optional - configurable

--- a/src/main/resources/configs/s3.solr.config.properties
+++ b/src/main/resources/configs/s3.solr.config.properties
@@ -15,3 +15,4 @@ output.solr.conversion.integerTags=md_jpeg_image_width,md_jpeg_image_height,md_e
 output.columns.includeDirsInTags=true
 output.columns.namingConvention=snakeCase
 output.columns.metadataPrefix=md_
+output.columns.includeMetadataContent=true
