--- a/src/main/resources/configs/solr.config.properties
+++ b/src/main/resources/configs/solr.config.properties
@@ -10,3 +10,4 @@ output.solr.conversion.integerTags=md_jpeg_image_width,md_jpeg_image_height,md_e
 output.columns.includeDirsInTags=true
 output.columns.namingConvention=snakeCase
 output.columns.metadataPrefix=md_
+output.columns.includeMetadataContent=true
