--- a/src/main/resources/configs/solr.config.properties
+++ b/src/main/resources/configs/solr.config.properties
@@ -11,3 +11,6 @@ output.columns.includeDirsInTags=true
 output.columns.namingConvention=snakeCase
 output.columns.metadataPrefix=md_
 output.columns.includeMetadataContent=true
+processing.thumbnails.enabled=true
+processing.thumbnails.smallDimensions=150x100
+processing.thumbnails.mediumDimensions=800x600
