New "allowed file types" filter - Improvements regarding the comments

--- a/src/main/resources/configs/dospaces.csv.config.properties
+++ b/src/main/resources/configs/dospaces.csv.config.properties
@@ -11,3 +11,4 @@ output.directoryPath=s3a://<SET_BUCKET_NAME_HERE>/sample_csv_output
 output.format=csv
 processing.maxMemoryGB=2
 output.filesNumber=1
+filter.allowedFileTypes=<CHANGE_ME>
