--- a/src/main/resources/configs/csv.config.properties
+++ b/src/main/resources/configs/csv.config.properties
@@ -7,4 +7,4 @@ output.format=csv
 processing.maxMemoryGB=2
 output.filesNumber=1
 filter.mandatoryTags=<CHANGE_ME>
-filter.allowedExtensions=<CHANGE_ME>
+filter.allowedFileTypes=<CHANGE_ME>
