--- a/src/main/resources/configs/s3.solr.config.properties
+++ b/src/main/resources/configs/s3.solr.config.properties
@@ -19,3 +19,4 @@ output.columns.includeMetadataContent=true
 processing.thumbnails.enabled=true
 processing.thumbnails.smallDimensions=150x100
 processing.thumbnails.mediumDimensions=800x600
+filter.allowedFileTypes=<CHANGE_ME>
