--- a/src/main/resources/configs/solr.config.properties
+++ b/src/main/resources/configs/solr.config.properties
@@ -14,3 +14,4 @@ output.columns.includeMetadataContent=true
 processing.thumbnails.enabled=true
 processing.thumbnails.smallDimensions=150x100
 processing.thumbnails.mediumDimensions=800x600
+filter.allowedFileTypes=<CHANGE_ME>
